registration and login connected with database. Logout also

--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@prisma/client": "^6.5.0",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "date-fns": "^3.4.0",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
     "next": "14.2.4",
-    "next-auth": "^4.24.7",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
