--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@iconify/icons-ion": "^1.2.10",
-    "@iconify/react": "^5.0.1",
+    "@iconify/react": "^5.2.0",
     "@prisma/client": "^6.5.0",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
@@ -21,13 +21,13 @@
     "date-fns": "^3.4.0",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "prisma": "^6.5.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-slick": "^0.30.2",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
@@ -36,13 +36,23 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/debug": "^4.1.12",
+    "@types/hast": "^3.0.4",
+    "@types/mdast": "^4.0.4",
+    "@types/ms": "^2.1.0",
+    "@types/next": "^8.0.7",
+    "@types/node": "^20.17.28",
+    "@types/prop-types": "^15.7.14",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.5",
     "@types/react-slick": "^0.23.13",
+    "@types/unist": "^3.0.3",
+    "hast": "^0.0.2",
+    "mdast": "^2.3.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "unist": "^0.0.1"
   }
 }
