--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.5",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "slick-carousel": "^1.8.1"
