--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^11.0.5",
     "remark": "^15.0.1",
